...
            });
            Alert.alert(
                t("Body Data"),
                t("Body data updated"),
                [
                    {
                        text: "OK",
                        onPress: () => router.push('/body')
                    }
                ]
            );
        } catch (error) {
            console.error(error);
...
