...
                                );
                            })}
                        </CalendarScrollView>
                    </View>

                    {/* Resumo Diário Card */}
                    <NutritionalSummaryCard testID="home-daily-summary-card" theme={colorScheme}>
                        <CardHeader>
                            <CardTitle>{t('Resumo Diário')}</CardTitle>
                        </CardHeader>
                        
                        <CaloriesLabel>{t('Calorias Consumidas')}</CaloriesLabel>
                        <CaloriesProgressRow>
...
